--- a/src/main/resources/templates/signup-success.html
+++ b/src/main/resources/templates/signup-success.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="refresh" content="10; url=/login">
     <div th:replace="fragments/css.html :: css"></div>
-    <title>Nix</title>
+    <title>Nemo</title>
 </head>
 <body>
 <header>
