--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <div th:replace="fragments/css.html :: css"></div>
-    <title>Nix</title>
+    <title>Nemo</title>
 </head>
 <body>
 <div th:replace="fragments/header.html :: header"></div>
